# dark-hpstr

./: .gitmodules  CMakeLists.txt
Event/: CMakeLists.txt
Event/include/Event/: Event.h  EventHeader.h
Event/src/: Event.cxx  EventHeader.cxx
Processing/: CMakeLists.txt
Processing/include/Processing/: ConfigurePython.h  EventFile.h  Exception.h  Process.h  Processor.h  TupleBuilder.h
Processing/python/: darkcfg.py
Processing/src/: ConfigurePython.cxx  EventFile.cxx  Process.cxx  Processor.cxx  ProcessorFactory.cxx  TupleBuilder.cxx  dark_hpstr.cxx
processing/include/: ConfigurePython.h  Parameters.h
processing/src/: ConfigurePython.cxx  dark_hpstr.cxx
